# infotecs_test

./: CMakeLists.txt  README.md
app/: main.cpp  task2.cpp  task3.cpp
inc/: logger.hpp  logqueue.hpp  socket_logger.hpp  utils.hpp
src/: logger.cpp  logqueue.cpp  socket_logger.cpp  utils.cpp
test/: test_framework.hpp  test_logger.cpp  test_main.cpp  test_utils.cpp
